# rs-soroban-ultrahonk

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  e2e.yml  ultrahonk-soroban-verifier-ci.yml
circuits/: README.md
circuits/identity/src/: main.nr
circuits/scripts/: build_all.sh
contracts/identity/: Cargo.toml  README.md
contracts/identity/src/: lib.rs
contracts/identity/tests/: identity.rs
contracts/rs-soroban-ultrahonk/: Cargo.toml
contracts/rs-soroban-ultrahonk/src/: lib.rs
contracts/rs-soroban-ultrahonk/tests/: integration_tests.rs
contracts/tornado_classic/contracts/: Cargo.toml
contracts/tornado_classic/contracts/examples/: populate_publics.rs
contracts/tornado_classic/contracts/src/: mixer.rs
contracts/tornado_classic/contracts/tests/: mixer.rs  verifier.rs
crates/test-utils/: Cargo.toml
crates/ultrahonk-soroban-verifier/: Cargo.toml
crates/ultrahonk-soroban-verifier/src/: debug.rs  ec.rs  env.rs  field.rs  lib.rs  relations.rs  shplemini.rs  sumcheck.rs  transcript.rs  types.rs  utils.rs  verifier.rs
crates/ultrahonk-soroban-verifier/tests/: negative_tests.rs  verifier_test.rs
scripts/: config.sh  fund_account.sh  run_identity_e2e.sh  verify.sh  verify_identity.sh
scripts/invoke_ultrahonk/: package-lock.json
scripts/measure_ultrahonk_costs/: measure_ultrahonk_costs.ts  package-lock.json
tests/: build_circuits.sh  integration_tests.rs
tornado_classic/circuit/: Nargo.toml
tornado_classic/circuit/scripts/: gen_artifacts.sh
tornado_classic/contracts/: Cargo.toml
ultrahonk-soroban-verifier/: Cargo.toml
ultrahonk-soroban-verifier/src/: ec.rs
ultrahonk-soroban-verifier/tests/: build_circuits.sh
