[package]
name = "rs-soroban-ultrahonk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "25.3.0", default-features = false, features = [
    "alloc",
] }
ultrahonk_soroban_verifier = { path = "ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
# Enable test helpers for local unit tests
soroban-sdk = { version = "25.3.0", features = ["testutils", "alloc"] }
soroban-env-host = "25.0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
