[workspace]
resolver = "2"
members = [
    "crates/ultrahonk-soroban-verifier",
    "crates/test-utils",
    "contracts/rs-soroban-ultrahonk",
    "contracts/tornado_classic/contracts",
    "contracts/identity"
]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "3b031847eb043856cc5bcad45bd5a6512370cd16", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
