[workspace]
resolver = "2"
members = [
    "crates/ultrahonk-soroban-verifier",
    "contracts/rs-soroban-ultrahonk",
    "contracts/tornado_classic/contracts"
]

[patch.crates-io]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", rev = "acffbbd45be6a0a551146eebfc268d6f95078246" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
