[package]
name = "ultrahonk_soroban_verifier"
version = "0.1.0"
edition = "2021"

license     = "MIT"
description = "Rust verifier for UltraHonk proofs"
repository  = "https://github.com/yugocabrio/rs-soroban-ultrahonk"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ultrahonk-test-utils = { path = "../test-utils" }

[features]
default = ["alloc"]
std = [
    "hex/std",
]
trace = []

alloc = [
    "hex/alloc",
]
