[package]
name = "tornado_classic_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
rs-soroban-ultrahonk = { path = "../.." }
soroban-sdk = { version = "25.3.0", default-features = false, features = ["alloc"] }
soroban-poseidon = "25.0.0-rc.1"
ultrahonk_soroban_verifier = { path = "../../ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils", "alloc"] }
soroban-env-host = "25.0.0"
num-bigint = "0.4"

[lib]
name = "tornado_classic_contracts"
path = "lib.rs"

[features]
std = []
testutils = []
wasm-cost = ["testutils"]

[[example]]
name = "populate_publics"
path = "examples/populate_publics.rs"
required-features = ["std"]

