[package]
name = "tornado_classic_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
rs-soroban-ultrahonk = { path = "../../rs-soroban-ultrahonk" }
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-poseidon = { git = "https://github.com/stellar/rs-soroban-poseidon", rev = "c1e8cdb6b59817a315b329bdfd08564231b0e424" }
ultrahonk_soroban_verifier = { path = "../../../crates/ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
soroban-env-host = "26.1.2"
num-bigint = "0.4"

[lib]
name = "tornado_classic_contracts"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
std = []
testutils = []
wasm-cost = ["testutils"]

[[example]]
name = "populate_publics"
path = "examples/populate_publics.rs"
required-features = ["std"]
